objects/ssot__LearningPathwayTmplPgmPlan__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Learning Pathway Template Program Pln Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LearningPathwayTemplateId__c</fullName>
        <label>Learning Pathway Template</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LearningProgramPlanId__c</fullName>
        <label>Learning Program Plan</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819812967_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LearningPathwayTmplPgmPlan_LearningP_rel</label>
        <referenceTo>ssot__LearningProgramPlan__dlm</referenceTo>
        <relationshipLabel>LearningPathwayTmplPgmPlan_LearningP_rel</relationshipLabel>
        <relationshipName>rel_1719819812967_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819884010_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LearningPathwayTmplPgmPlan_LearningP_rel</label>
        <referenceTo>ssot__LearningPathwayTemplate__dlm</referenceTo>
        <relationshipLabel>LearningPathwayTmplPgmPlan_LearningP_rel</relationshipLabel>
        <relationshipName>rel_1719819884010_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>